# evo

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
evo/: align.py  antibody.py  dataset.py  dms.py  folding.py  likelihood.py  phylogeny.py  sequence.py  tensor.py  tokenization.py
evo/evaluation/: __init__.py  _dssp.py  _foldseek.py  _mmseqs.py  _perplexity.py  _structure.py  _tmalign.py
evo/oracles/: README.md  USAGE.md  __init__.py  base.py  bytenet.py  covid_model.py  covid_oracle.py  example.py  llm_oracle.py  rand_oracle.py
evo/utils/: __init__.py  _misc.py
scripts/: run_esm_vep.py  run_folding.py  run_foldseek.py  run_mmseqs.py
